--- a/subscriber/templates/confirmed.html
+++ b/subscriber/templates/confirmed.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="static/main.css">
 
 <h2>All set. {{session['email']}} will recieve email notifications from ENC Earthquake Detection Notification System<h2>
 
