--- a/subscriber/templates/verify.html
+++ b/subscriber/templates/verify.html
@@ -1,42 +1,19 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
- 
-  
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <link rel="stylesheet" type="text/css" href="static/main.css">
-
 </head>
-
 <body>
-
-
-
 <h4>A Code was sent to {{session['email']}}. Please confirm your email by entering that code below</h4>
-
 	<div>
-		<form method="POST" action="">
-			{{ form.csrf_token }}
-			<fieldset>
-				<legend>
-				
-				</legend>
-				<div>
-					{{  form.code.label(class="form-control-label")  }}
-					{{  form.code(class="form-control form-control-lg")  }}
-				</div>
-				
-			</fieldset>
-			<div>
-				{{ form.submit() }}
-			</div>
+		<form method="POST" action="/api/auth/verify_code/">
+		  <div class="input-group">
+		    <input type="number" name="verification_code" required>
+		    <input type="submit" class="btn btn-login" value="Submit">
+		  </div>
 		</form>
 	</div>
-	
-
-	
 </body>
 </html>
